@@ -1,58 +1,48 @@
 package name.abuchen.portfolio.online.impl;
 
-import static name.abuchen.portfolio.online.impl.YahooHelper.FMT_PRICE;
-import static name.abuchen.portfolio.online.impl.YahooHelper.asDate;
 import static name.abuchen.portfolio.online.impl.YahooHelper.asNumber;
 import static name.abuchen.portfolio.online.impl.YahooHelper.asPrice;
-import static name.abuchen.portfolio.online.impl.YahooHelper.stripQuotes;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
-import java.text.DecimalFormat;
 import java.text.MessageFormat;
 import java.text.ParseException;
+import java.time.Instant;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import org.json.simple.JSONArray;
+import org.json.simple.JSONObject;
+import org.json.simple.JSONValue;
 
 import name.abuchen.portfolio.Messages;
 import name.abuchen.portfolio.model.Exchange;
 import name.abuchen.portfolio.model.LatestSecurityPrice;
 import name.abuchen.portfolio.model.Security;
 import name.abuchen.portfolio.model.SecurityPrice;
+import name.abuchen.portfolio.model.SecurityProperty;
 import name.abuchen.portfolio.money.Values;
 import name.abuchen.portfolio.online.QuoteFeed;
+import name.abuchen.portfolio.util.Dates;
+import name.abuchen.portfolio.util.WebAccess;
 
 public class YahooFinanceQuoteFeed implements QuoteFeed
 {
     public static final String ID = "YAHOO"; //$NON-NLS-1$
-
-    private static final String LATEST_URL = "http://finance.yahoo.com/d/quotes.csv?s={0}&f=sl1d1hgpv"; //$NON-NLS-1$
-    // s = symbol
-    // l1 = last trade (price only)
-    // d1 = last trade date
-    // h = day's high
-    // g = day's low
-    // p = previous close
-    // v = volume
-    // Source = http://cliffngan.net/a/13
-
-    @SuppressWarnings("nls")
-    private static final String HISTORICAL_URL = "http://ichart.finance.yahoo.com/table.csv?ignore=.csv" //
-                    + "&s={0}" // ticker symbol
-                    + "&a={1}&b={2}&c={3}" // begin
-                    + "&d={4}&e={5}&f={6}" // end
-                    + "&g=d"; // daily
 
     @Override
     public String getId()
@@ -67,92 +57,78 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
     }
 
     @Override
-    public final boolean updateLatestQuotes(List<Security> securities, List<Exception> errors)
+    public final boolean updateLatestQuotes(Security security, List<Exception> errors)
     {
-        Map<String, List<Security>> symbol2security = securities.stream()
-                        //
-                        .filter(s -> s.getTickerSymbol() != null)
-                        .collect(Collectors.groupingBy(s -> s.getTickerSymbol().toUpperCase(Locale.ROOT)));
 
-        String symbolString = symbol2security.keySet().stream().collect(Collectors.joining("+")); //$NON-NLS-1$
-
-        boolean isUpdated = false;
-
-        String url = MessageFormat.format(LATEST_URL, symbolString.toString());
-
-        try (BufferedReader reader = openReader(url, errors))
+        try
         {
-            if (reader == null)
+            @SuppressWarnings("nls")
+            String html = new WebAccess("query1.finance.yahoo.com", "/v7/finance/quote") //
+                            .addParameter("lang", "en-US").addParameter("region", "US")
+                            .addParameter("corsDomain", "finance.yahoo.com")
+                            .addParameter("symbols", security.getTickerSymbol()).get();
+
+            int startIndex = html.indexOf("quoteResponse"); //$NON-NLS-1$
+            if (startIndex < 0)
                 return false;
 
-            String line = null;
-            while ((line = reader.readLine()) != null)
+            LatestSecurityPrice price = new LatestSecurityPrice();
+
+            Optional<String> time = extract(html, startIndex, "\"regularMarketTime\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (time.isPresent())
             {
-                String[] values = line.split(","); //$NON-NLS-1$
-                if (values.length != 7)
-                {
-                    errors.add(new IOException(MessageFormat.format(Messages.MsgUnexpectedValue, line)));
-                    return false;
-                }
-
-                String symbol = stripQuotes(values[0]);
-                List<Security> forSymbol = symbol2security.remove(symbol);
-                if (forSymbol == null)
-                {
-                    errors.add(new IOException(MessageFormat.format(Messages.MsgUnexpectedSymbol, symbol, line)));
-                    continue;
-                }
-
-                try
-                {
-                    LatestSecurityPrice price = buildPrice(values);
-
-                    for (Security security : forSymbol)
-                    {
-                        boolean isAdded = security.setLatest(price);
-                        isUpdated = isUpdated || isAdded;
-                    }
-                }
-                catch (NumberFormatException | ParseException | DateTimeParseException e)
-                {
-                    errors.add(new IOException(MessageFormat.format(Messages.MsgErrorsConvertingValue, line), e));
-                }
+                long epoch = Long.parseLong(time.get());
+                price.setDate(Instant.ofEpochSecond(epoch).atZone(ZoneId.systemDefault()).toLocalDate());
             }
 
-            for (String symbol : symbol2security.keySet())
-                errors.add(new IOException(MessageFormat.format(Messages.MsgMissingResponse, symbol)));
+            Optional<String> value = extract(html, startIndex, "\"regularMarketPrice\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (value.isPresent())
+                price.setValue(asPrice(value.get()));
+
+            Optional<String> previousClose = extract(html, startIndex, "\"regularMarketPreviousClose\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (previousClose.isPresent())
+                price.setPreviousClose(asPrice(previousClose.get()));
+
+            Optional<String> high = extract(html, startIndex, "\"regularMarketDayHigh\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (high.isPresent())
+                price.setHigh(asPrice(high.get()));
+
+            Optional<String> low = extract(html, startIndex, "\"regularMarketDayLow\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (low.isPresent())
+                price.setLow(asPrice(low.get()));
+
+            Optional<String> volume = extract(html, startIndex, "\"regularMarketVolume\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (volume.isPresent())
+                price.setVolume(asNumber(volume.get()));
+
+            if (price.getDate() == null || price.getValue() <= 0)
+            {
+                errors.add(new IOException(html));
+                return false;
+            }
+
+            security.setLatest(price);
+            return true;
         }
-        catch (IOException e)
+        catch (IOException | ParseException e)
         {
             errors.add(e);
+            return false;
         }
-
-        return isUpdated;
     }
 
-    private LatestSecurityPrice buildPrice(String[] values) throws ParseException
+    private Optional<String> extract(String body, int startIndex, String startToken, String endToken)
     {
-        long lastTrade = asPrice(values[1]);
+        int begin = body.indexOf(startToken, startIndex);
 
-        LocalDate lastTradeDate = asDate(values[2]);
-        if (lastTradeDate == null) // can't work w/o date
-            lastTradeDate = LocalDate.now();
+        if (begin < 0)
+            return Optional.empty();
 
-        long daysHigh = asPrice(values[3]);
+        int end = body.indexOf(endToken, begin + startToken.length());
+        if (end < 0)
+            return Optional.empty();
 
-        long daysLow = asPrice(values[4]);
-
-        long previousClose = asPrice(values[5]);
-
-        int volume = asNumber(values[6]);
-
-        LatestSecurityPrice price = new LatestSecurityPrice(lastTradeDate, lastTrade);
-        price.setHigh(daysHigh);
-        price.setLow(daysLow);
-        price.setPreviousClose(previousClose);
-        price.setVolume(volume);
-
-        return price;
+        return Optional.of(body.substring(begin + startToken.length(), end));
     }
 
     @Override
@@ -182,7 +158,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         if (!security.getPrices().isEmpty())
         {
             SecurityPrice lastHistoricalQuote = security.getPrices().get(security.getPrices().size() - 1);
-            return lastHistoricalQuote.getTime();
+            return lastHistoricalQuote.getDate();
         }
         else
         {
@@ -200,7 +176,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
     @Override
     public List<LatestSecurityPrice> getHistoricalQuotes(String response, List<Exception> errors)
     {
-        throw new UnsupportedOperationException();
+        return extractQuotes(LatestSecurityPrice.class, response, errors);
     }
 
     private <T extends SecurityPrice> List<T> internalGetQuotes(Class<T> klass, Security security, LocalDate startDate,
@@ -212,52 +188,104 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             return Collections.emptyList();
         }
 
-        LocalDate stopDate = LocalDate.now();
+        try
+        {
+            String responseBody = requestData(security, startDate);
+            return extractQuotes(klass, responseBody, errors);
+        }
+        catch (IOException e)
+        {
+            errors.add(new IOException(MessageFormat.format(Messages.MsgErrorDownloadYahoo, 1,
+                            security.getTickerSymbol(), e.getMessage()), e));
+        }
 
-        String wknUrl = MessageFormat.format(HISTORICAL_URL, //
-                        security.getTickerSymbol(), //
-                        startDate.getMonth().getValue() - 1, //
-                        startDate.getDayOfMonth(), //
-                        Integer.toString(startDate.getYear()), //
-                        stopDate.getMonth().getValue() - 1, //
-                        stopDate.getDayOfMonth(), //
-                        Integer.toString(stopDate.getYear()));
+        return Collections.emptyList();
+    }
 
+    @SuppressWarnings("nls")
+    private String requestData(Security security, LocalDate startDate) throws IOException
+    {
+        int days = Dates.daysBetween(startDate, LocalDate.now());
+
+        // "max" only returns a sample of quotes
+        String range = "10y"; //$NON-NLS-1$
+
+        if (days < 25)
+            range = "1mo"; //$NON-NLS-1$
+        else if (days < 75)
+            range = "3mo"; //$NON-NLS-1$
+        else if (days < 150)
+            range = "6mo"; //$NON-NLS-1$
+        else if (days < 300)
+            range = "1y"; //$NON-NLS-1$
+        else if (days < 600)
+            range = "2y"; //$NON-NLS-1$
+        else if (days < 1500)
+            range = "5y"; //$NON-NLS-1$
+
+        return new WebAccess("query1.finance.yahoo.com", "/v7/finance/spark") //
+                        .addParameter("symbols", security.getTickerSymbol()).addParameter("range", range)
+                        .addParameter("interval", "1d").get();
+
+    }
+
+    private <T extends SecurityPrice> List<T> extractQuotes(Class<T> klass, String responseBody, List<Exception> errors)
+    {
         List<T> answer = new ArrayList<>();
 
-        String line = null;
-        try (BufferedReader reader = openReader(wknUrl, errors))
+        try
         {
-            if (reader == null)
-                return answer;
+            JSONObject responseData = (JSONObject) JSONValue.parse(responseBody);
+            if (responseData == null)
+                throw new IOException("responseBody"); //$NON-NLS-1$
 
-            line = reader.readLine();
+            JSONObject resultSet = (JSONObject) responseData.get("spark"); //$NON-NLS-1$
+            if (resultSet == null)
+                throw new IOException("spark"); //$NON-NLS-1$
 
-            // poor man's check
-            if (!"Date,Open,High,Low,Close,Volume,Adj Close".equals(line)) //$NON-NLS-1$
-                throw new IOException(MessageFormat.format(Messages.MsgUnexpectedHeader, line));
+            JSONArray result = (JSONArray) resultSet.get("result"); //$NON-NLS-1$
+            if (result == null || result.isEmpty())
+                throw new IOException("result"); //$NON-NLS-1$
 
-            DecimalFormat priceFormat = FMT_PRICE.get();
-            DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd"); //$NON-NLS-1$
+            JSONObject result0 = (JSONObject) result.get(0);
+            if (result0 == null)
+                throw new IOException("result[0]"); //$NON-NLS-1$
 
-            while ((line = reader.readLine()) != null)
+            JSONArray response = (JSONArray) result0.get("response"); //$NON-NLS-1$
+            if (response == null || response.isEmpty())
+                throw new IOException("response"); //$NON-NLS-1$
+
+            JSONObject response0 = (JSONObject) response.get(0);
+            if (response0 == null)
+                throw new IOException("response[0]"); //$NON-NLS-1$
+
+            JSONArray timestamp = (JSONArray) response0.get("timestamp"); //$NON-NLS-1$
+
+            JSONObject indicators = (JSONObject) response0.get("indicators"); //$NON-NLS-1$
+            if (indicators == null)
+                throw new IOException("indicators"); //$NON-NLS-1$
+
+            JSONArray quotes = extractQuotesArray(indicators);
+
+            int size = quotes.size();
+
+            for (int index = 0; index < size; index++)
             {
-                String[] values = line.split(","); //$NON-NLS-1$
-                if (values.length != 7)
-                    throw new IOException(MessageFormat.format(Messages.MsgUnexpectedValue, line));
+                Long ts = (Long) timestamp.get(index);
+                Double q = (Double) quotes.get(index);
 
-                T price = klass.newInstance();
-
-                fillValues(values, price, priceFormat, dateFormat);
-
-                answer.add(price);
+                if (ts != null && q != null)
+                {
+                    T price = klass.getDeclaredConstructor().newInstance();
+                    price.setDate(LocalDateTime.ofEpochSecond(ts, 0, ZoneOffset.UTC).toLocalDate());
+                    price.setValue(Values.Quote.factorize(q));
+                    answer.add(price);
+                }
             }
         }
-        catch (NumberFormatException | ParseException | DateTimeParseException e)
-        {
-            errors.add(new IOException(MessageFormat.format(Messages.MsgErrorsConvertingValue, line), e));
-        }
-        catch (InstantiationException | IllegalAccessException | IOException e)
+        catch (IOException | InstantiationException | IllegalAccessException | IndexOutOfBoundsException
+                        | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+                        | SecurityException e)
         {
             errors.add(e);
         }
@@ -265,30 +293,21 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         return answer;
     }
 
-    protected <T extends SecurityPrice> void fillValues(String[] values, T price, DecimalFormat priceFormat,
-                    DateTimeFormatter dateFormat) throws ParseException, DateTimeParseException
+    protected JSONArray extractQuotesArray(JSONObject indicators) throws IOException
     {
-        LocalDate date = LocalDate.parse(values[0], dateFormat);
+        JSONArray quotes = (JSONArray) indicators.get("quote"); //$NON-NLS-1$
+        if (quotes == null || quotes.isEmpty())
+            throw new IOException("quote"); //$NON-NLS-1$
 
-        Number q = priceFormat.parse(values[4]);
-        long v = (long) (q.doubleValue() * Values.Quote.factor());
+        JSONObject quote = (JSONObject) quotes.get(0);
+        if (quote == null)
+            throw new IOException();
 
-        price.setTime(date);
-        price.setValue(v);
+        JSONArray close = (JSONArray) quote.get("close"); //$NON-NLS-1$
+        if (close == null || close.isEmpty())
+            throw new IOException("close"); //$NON-NLS-1$
 
-        if (price instanceof LatestSecurityPrice)
-        {
-            LatestSecurityPrice latest = (LatestSecurityPrice) price;
-
-            q = priceFormat.parse(values[5]);
-            latest.setVolume(q.intValue());
-
-            q = priceFormat.parse(values[2]);
-            latest.setHigh((long) (q.doubleValue() * Values.Quote.factor()));
-
-            q = priceFormat.parse(values[3]);
-            latest.setLow((long) (q.doubleValue() * Values.Quote.factor()));
-        }
+        return close;
     }
 
     @Override
@@ -296,52 +315,90 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
     {
         List<Exchange> answer = new ArrayList<>();
 
+        // This is not the best place to include the market information from
+        // portfolio-report.net, but for now the list of exchanges is only
+        // available for Yahoo search provider.
+
+        List<SecurityProperty> markets = subject.getProperties()
+                        .filter(p -> p.getType() == SecurityProperty.Type.MARKET).collect(Collectors.toList());
+
+        markets.stream().map(p -> {
+            Exchange exchange = new Exchange(p.getValue(), ExchangeLabels.getString("portfolio-report." + p.getName())); //$NON-NLS-1$
+            if ("XFRA".equals(p.getName())) //$NON-NLS-1$
+                exchange.setId(exchange.getId() + ".F"); //$NON-NLS-1$
+            return exchange;
+        }).forEach(answer::add);
+
+        Set<String> candidates = new HashSet<>();
+        answer.forEach(e -> candidates.add(e.getId()));
+
+        // add existing ticker symbol as well
         String symbol = subject.getTickerSymbol();
+        if (symbol != null && !symbol.isEmpty())
+            candidates.add(symbol);
 
-        // if symbol is null, return empty list
-        if (symbol == null || symbol.trim().length() == 0)
-            return answer;
+        for (String candidate : candidates)
+        {
+            searchExchanges(candidate, answer, errors);
+        }
 
+        if (symbol != null && !symbol.isEmpty())
+        {
+            // Issue #251
+            // sometimes Yahoo does not return the default exchange which
+            // prevents selecting this security (example: searching for GOOG
+            // does return only unimportant exchanges)
+            Optional<Exchange> defaultExchange = answer.stream() //
+                            .filter(e -> e.getId().equals(subject.getTickerSymbol())).findAny();
+            if (!defaultExchange.isPresent())
+                answer.add(new Exchange(subject.getTickerSymbol(), subject.getTickerSymbol()));
+
+            if (answer.isEmpty())
+            {
+                // Issue #29
+                // at least add the given ticker symbol if the search returns
+                // nothing (sometimes accidentally)
+                answer.add(createExchange(subject.getTickerSymbol()));
+            }
+        }
+
+        Collections.sort(answer, (r, l) -> r.getId().compareTo(l.getId()));
+
+        return answer;
+    }
+
+    private void searchExchanges(String candidate, List<Exchange> answer, List<Exception> errors)
+    {
         // strip away exchange suffix to search for all available exchanges
-        int p = symbol.indexOf('.');
-        String prefix = p >= 0 ? symbol.substring(0, p + 1) : symbol + "."; //$NON-NLS-1$
+        int p = candidate.indexOf('.');
+        String prefix = p >= 0 ? candidate.substring(0, p + 1) : candidate + "."; //$NON-NLS-1$
+
+        // ensure we do not add duplicates
+        Set<String> duplicates = new HashSet<>();
+        answer.forEach(e -> duplicates.add(e.getId()));
 
         try
         {
-            searchSymbols(answer, prefix);
+            searchSymbols(prefix) //
+                            .filter(r -> !duplicates.contains(r.getSymbol())) //
+                            .map(r -> createExchange(r.getSymbol())).forEach(e -> {
+                                duplicates.add(e.getId());
+                                answer.add(e);
+                            });
         }
         catch (IOException e)
         {
             errors.add(e);
         }
 
-        // Issue #251
-        // sometimes Yahoo does not return the default exchange which prevents
-        // selecting this security (example: searching for GOOG does return only
-        // unimportant exchanges)
-        Optional<Exchange> defaultExchange = answer.stream() //
-                        .filter(e -> e.getId().equals(subject.getTickerSymbol())).findAny();
-        if (!defaultExchange.isPresent())
-            answer.add(new Exchange(subject.getTickerSymbol(), subject.getTickerSymbol()));
-
-        if (answer.isEmpty())
-        {
-            // Issue #29
-            // at least add the given ticker symbol if the search returns
-            // nothing (sometimes accidentally)
-            answer.add(createExchange(subject.getTickerSymbol()));
-        }
-
-        return answer;
     }
-
 
     private Exchange createExchange(String symbol)
     {
         int e = symbol.indexOf('.');
         String exchange = e >= 0 ? symbol.substring(e) : ".default"; //$NON-NLS-1$
         String label = ExchangeLabels.getString("yahoo" + exchange); //$NON-NLS-1$
-        return new Exchange(symbol, String.format("%s (%s)", label, symbol)); //$NON-NLS-1$
+        return new Exchange(symbol, label);
     }
 
     protected BufferedReader openReader(String url, List<Exception> errors)
@@ -364,8 +421,8 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
     }
 
     /* enable testing */
-    protected void searchSymbols(List<Exchange> answer, String query) throws IOException
+    protected Stream<YahooSymbolSearch.Result> searchSymbols(String query) throws IOException
     {
-        new YahooSymbolSearch().search(query).map(r -> createExchange(r.getSymbol())).forEach(e -> answer.add(e));
+        return new YahooSymbolSearch().search(query);
     }
 }
