@@ -4,12 +4,42 @@ import java.util.List;
 
 import name.abuchen.portfolio.model.AccountTransaction;
 import name.abuchen.portfolio.model.PortfolioTransaction;
+import name.abuchen.portfolio.model.Security;
 import name.abuchen.portfolio.model.Transaction;
 import name.abuchen.portfolio.money.CurrencyConverter;
 
 /* package */abstract class Calculation
 {
+    private Security security;
     private String termCurrency;
+
+    /**
+     * Finish up all calculations.
+     */
+    public void finish()
+    {
+    }
+
+    /**
+     * Gets the underlying {@link Security}.
+     * 
+     * @return {@link Security} on success, else null
+     */
+    public Security getSecurity()
+    {
+        return this.security;
+    }
+
+    /**
+     * Sets the underlying {@link Security}.
+     * 
+     * @param security
+     *            {@link Security} (can be null)
+     */
+    public void setSecurity(Security security)
+    {
+        this.security = security;
+    }
 
     public String getTermCurrency()
     {
@@ -22,19 +52,24 @@ import name.abuchen.portfolio.money.CurrencyConverter;
     }
 
     public void visit(CurrencyConverter converter, DividendInitialTransaction t)
-    {}
+    {
+    }
 
     public void visit(CurrencyConverter converter, DividendFinalTransaction t)
-    {}
+    {
+    }
 
     public void visit(CurrencyConverter converter, DividendTransaction t)
-    {}
+    {
+    }
 
     public void visit(CurrencyConverter converter, PortfolioTransaction t)
-    {}
+    {
+    }
 
     public void visit(CurrencyConverter converter, AccountTransaction t)
-    {}
+    {
+    }
 
     public final void visitAll(CurrencyConverter converter, List<? extends Transaction> transactions)
     {
@@ -55,14 +90,16 @@ import name.abuchen.portfolio.money.CurrencyConverter;
         }
     }
 
-    public static <T extends Calculation> T perform(Class<T> type, CurrencyConverter converter,
+    public static <T extends Calculation> T perform(Class<T> type, CurrencyConverter converter, Security security,
                     List<? extends Transaction> transactions)
     {
         try
         {
-            T thing = type.newInstance();
+            T thing = type.getDeclaredConstructor().newInstance();
+            thing.setSecurity(security);
             thing.setTermCurrency(converter.getTermCurrency());
             thing.visitAll(converter, transactions);
+            thing.finish();
             return thing;
         }
         catch (Exception e)
